--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -15,14 +15,11 @@
     <mat-card-content class="mt-6">
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col space-y-4">
         <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input matInput formControlName="email" placeholder="Enter your email">
+          <mat-label>Username</mat-label>
+          <input matInput formControlName="username" placeholder="Enter your username">
           
-          @if (loginForm.controls['email'].hasError('required') && loginForm.controls['email'].touched) {
-            <mat-error>Email is required.</mat-error>
-          }
-          @if (loginForm.controls.email.hasError('email') && loginForm.controls.email.touched) {
-            <mat-error>Please enter a valid email address.</mat-error>
+          @if (loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched) {
+            <mat-error>Username is required.</mat-error>
           }
         </mat-form-field>
 
