--- a/frontend/src/app/main-view/main-view.component.css
+++ b/frontend/src/app/main-view/main-view.component.css
@@ -1,104 +1,80 @@
-.main-container {
+:host {
+  @apply flex items-center justify-center pt-10;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  gap: 20px;
+  padding: 2rem;
 }
 
-.top-container {
+.instructions {
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.content {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
   width: 100%;
-  gap: 20px;
+  max-width: 700px;
 }
 
-.section {
-  background-color: #f0f0f0;
-  padding: 20px;
-  border-radius: 8px;
-  width: 45%;
+.card {
+  flex: 1;
+  max-width: 400px;
+}
+
+.file-upload {
   display: flex;
-  flex-direction: column;
   align-items: center;
-}
-
-.tts-section {
-  width: 80%;
-}
-
-h2 {
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.file-upload-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.upload-button {
-  background-color: #007bff;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-bottom: 10px;
+  gap: 1rem;
 }
 
 .file-name {
-  color: #555;
+  font-style: italic;
 }
 
-.voice-recorder-container {
+.divider {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
 }
 
-.record-button {
-  background-color: #dc3545;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-bottom: 10px;
-}
-
-.sound-wave {
-  width: 100px;
-  height: 50px;
-  background-color: #ccc;
-}
-
-.tts-container {
+.text-to-speech {
+  margin-top: 2rem;
+  width: 100%;
+  max-width: 700px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: first baseline;
+}
+
+.full-width {
   width: 100%;
 }
 
-.text-area {
-  width: 90%;
-  height: 100px;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
+::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: transparent!important;
+  border: 1px solid #b9b9b9;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.listen-button {
-  background-color: #28a745;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+@media (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
 
-input[type="file"] {
-  display: none;
+  .divider {
+    flex-direction: row;
+  }
+
+  .divider mat-divider {
+    width: 100px;
+  }
 }
